--- a/Docker Compose with Multiple Local Containers/package.json
+++ b/Docker Compose with Multiple Local Containers/package.json
@@ -1,8 +1,9 @@
 {
-    "dependencies": {
-        "express":"*"
-    },
-    "scripts": {
-        "start": "node index.js"
-    }
+  "dependencies": {
+    "express": "^4.17.1",
+    "redis": "^3.0.2"
+  },
+  "scripts": {
+    "start": "node index.js"
+  }
 }
